ref #392: first working notarization on Mac