@@ -14,19 +14,60 @@
 #
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
-rm -R "${project.build.directory}/assembled/runtime" || exit 1
-echo "Deleted assembled runtime"
+mv "${project.build.directory}/assembled/runtime/" "${project.build.directory}/runtime/" || exit 1
+echo "Moved assembled runtime"
+rm "${project.build.directory}/runtime/bin/keytool" || exit 1
+echo "Removed unused (I think) keytool"
+rm "${project.build.directory}/runtime/bin/jrunscript" || exit 1
+echo "Removed unused (I think) jrunscript"
+rm -R "${project.build.directory}/assembled/bin"
+echo "Removed bin scripts"
 
-jpackager create-installer dmg --name "PDFsam Basic" --description "A free open source application to split, merge, extract pages and mix PDF files" \
---version ${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion} --vendor "Sober Lemur S.a.s. di Vacondio Andrea" \
---add-modules java.base,java.datatransfer,java.logging,java.naming,java.sql,java.desktop,java.xml,java.scripting,jdk.unsupported,java.prefs \
--o "${project.build.directory}" -i "${project.build.directory}/assembled" -c org.pdfsam.basic.App --license-file LICENSE.txt -j "${project.build.finalName}.jar" \
---icon "${project.build.directory}/dmg/Icon.icns" --identifier org.pdfsam.basic --user-jvm-args -Xmx=512m -a -Dorg.pdfsam.disable.ui.restore=true \
---category Business --mac-bundle-identifier org.pdfsam.basic --mac-bundle-name "PDFsam Basic" --verbose || exit 1
+$JAVA_HOME_14/bin/jpackage --runtime-image "${project.build.directory}/runtime/"  --type app-image \
+--input "${project.build.directory}/assembled/" --main-class org.pdfsam.basic.App --icon "${project.build.directory}/dmg/Icon.icns" --name "PDFsam Basic" \
+--description "A free open source application to split, merge, extract pages and mix PDF files" --main-jar "${project.build.finalName}.jar" \
+--app-version "${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}" --vendor "Sober Lemur S.a.s. di Vacondio Andrea" \
+--dest "${project.build.directory}" --copyright "2020 Sober Lemur S.a.s. di Vacondio Andrea" --java-options "-Dorg.pdfsam.disable.ui.restore=true" \
+--mac-package-identifier org.pdfsam.basic  --verbose || exit 1
+echo "App image created"
+
+codesign --force --deep --timestamp --entitlements "${project.build.directory}/dmg/entitlements.mac.plist" \
+--options runtime -vvv --sign "Developer ID Application: Andrea Vacondio" "${project.build.directory}/PDFsam Basic.app/Contents/runtime/Contents/Home/lib/jspawnhelper" || exit 1
+codesign --verify -vvv "${project.build.directory}/PDFsam Basic.app/Contents/runtime/Contents/Home/lib/jspawnhelper" || exit 1
+echo "Signed and verified jspawnhelper"
+
+codesign --force --deep --timestamp --entitlements "${project.build.directory}/dmg/entitlements.mac.plist" \
+--options runtime -vvv --sign "Developer ID Application: Andrea Vacondio" "${project.build.directory}/PDFsam Basic.app/Contents/runtime/Contents/Home/bin/java" || exit 1
+codesign --verify -vvv "${project.build.directory}/PDFsam Basic.app/Contents/runtime/Contents/Home/bin/java" || exit 1
+echo "Signed and verified java"
+
+find "${project.build.directory}/PDFsam Basic.app/Contents/" -type f \( -name "*.jar" -or -name "*.dylib" -or -name "*.jnilib" \) \
+-exec codesign --force --timestamp --entitlements "${project.build.directory}/dmg/entitlements.mac.plist" --options \
+runtime -vvv --sign "Developer ID Application: Andrea Vacondio" {} \; || exit 1
+
+find "${project.build.directory}/PDFsam Basic.app/Contents/" -type f \( -name "*.jar" -or -name "*.dylib" -or -name "*.jnilib" \) \
+-exec codesign --verify -vvv {} \; || exit 1
+echo "Signed and verified jars and dylibs"
+
+
+
+codesign --force --deep --timestamp --entitlements "${project.build.directory}/dmg/entitlements.mac.plist" \
+--options runtime -vvv --sign "Developer ID Application: Andrea Vacondio" "${project.build.directory}/PDFsam Basic.app" || exit 1
+codesign --verify -vvv "${project.build.directory}/PDFsam Basic.app" || exit 1
+echo "Signed and verified App"
+
+$JAVA_HOME_14/bin/jpackage --name "pdfsam" --mac-package-identifier org.pdfsam.basic  --mac-sign --mac-signing-key-user-name "Andrea Vacondio" \
+--app-version "${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}" --mac-package-name "PDFsam Basic" \
+--app-image "${project.build.directory}/PDFsam Basic.app" --license-file "${project.build.directory}/assembled/LICENSE.txt" --dest "${project.build.directory}" \
+--icon "${project.build.directory}/dmg/Icon.icns" || exit 1
 echo "dmg created"
 
-mv "${project.build.directory}/PDFsam Basic-${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}.dmg" "${project.build.directory}/pdfsam-${project.version}.dmg" || exit 1
-echo "dmg renamed to pdfsam-${project.version}.dmg"
-
-codesign --force --sign "Sober" "${project.build.directory}/pdfsam-${project.version}.dmg" || exit 1
+codesign --force --deep --timestamp --entitlements "${project.build.directory}/dmg/entitlements.mac.plist" --options runtime \
+-vvv --sign "Developer ID Application: Andrea Vacondio" "${project.build.directory}/pdfsam-${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}.dmg" || exit 1
 echo "dmg signed"
+
+xcrun altool --notarize-app --primary-bundle-id org.pdfsam.basic --username $APPLEID --password $APPLEIDPASS --file "${project.build.directory}/pdfsam-${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}.dmg" || exit 1
+echo "dmg notarized"
+
+
+
